style: fix overlap on right side of page and adjust homepage content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,6 @@
 } */
 
 body {
-  position: relative;
   background: var(--colour-white);
   color: var(--colour-darkest-blue);
   font-family: Arial, Helvetica, sans-serif;
@@ -37,12 +36,13 @@ main {
 }
 
 section {
-  padding: 2rem 4rem;
+  padding: 2rem;
 }
 
 h1 {
   font-size: 2rem;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
+  text-align: center;
 }
 
 h2,
@@ -51,5 +51,20 @@ h4,
 h5,
 h6 {
   font-size: 1.3rem;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
+  text-align: center;
+}
+
+@media (min-width: 425px) {
+  section {
+    padding: 2rem 4rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-align: left;
+  }
 }
