--- a/src/app/styles/footer.module.css
+++ b/src/app/styles/footer.module.css
@@ -1,4 +1,3 @@
 .footer {
-  position: absolute;
-  bottom: 0;
+  text-align: center;
 }
