--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -1,5 +1,10 @@
 .header {
-  height: 20vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 23vh;
   background-color: var(--colour-darkest-blue);
   color: var(--colour-white);
 }
@@ -9,4 +14,5 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-around;
+  max-width: 768px;
 }
